# supa-manager

./: .compose.env  .env.example  .example.env  .gitignore  Cargo.toml  Dockerfile  ENDPOINTS.txt  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum  mix.exs
.github/: FUNDING.yml
.github/actions/: release.yml
api/: api.go  auth.go  billing.go  getOrganizations.go  getPlatformNotifications.go  getProfilePermissions.go  getProjectStatus.go  organizations.go  postPlatformProjects.go  postPlatformSignup.go  profile.go  projects.go
conf/: config.go  migrations.go
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
database/: accounts.sql.go  db.go  models.go  organizations.sql.go  projects.sql.go
dns-example-service/: .env.example  README.md  config.go  go.mod  go.sum  main.go
helm/studio-chart/: Chart.yaml  README.md  deploy.sh  values.yaml
lib/: supa_manager.ex
lib/supa_manager/: application.ex  encryption.ex  endpoint.ex  jwt.ex  repo.ex  router.ex  user_auth.ex
migrations/: 00_init.sql
permisions/: org.go
priv/repo/: seed.exs
queries/: accounts.sql  organization_membership.sql  organizations.sql  projects.sql
src/: constants.rs  database.rs  main.rs  schema.rs  utils.rs
studio/: .env.example  README.md  build.sh  patch.sh
supa-manager/: .env.example  go.mod  main.go  sqlc.yaml
templates/: index.html.hbs  login.html.hbs
test/: supa_manager_test.exs
version-service/: .env.example  README.md  config.go  db.go  go.mod  go.sum  keys.go  main.go  models.go  queries.sql  queries.sql.go  schema.sql  sqlc.yaml
(+109 files in other folders)
